# DailyMovie

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/hooks/: hooks.json
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes_ai.py  routes_health.py  routes_movies.py  routes_user.py
backend/app/models/: database.py  schemas.py  user.py
backend/app/services/: ai_service.py  tmdb_service.py
backend/scripts/: recolor_icons.py  start_server.bat
data/: daily_movie.db
docs/notes/: miniprogram_missing_features.md
docs/plans/: 2026-02-11-bilingual-movies.md  2026-02-24-fix-keyword-input.md  2026-02-24-index-layout.md  2026-02-24-localization-chinese.md  2026-02-24-miniprogram-redesign.md  2026-02-24-recolor-icons.md  2026-02-24-tab-bar-color-update.md  2026-02-24-today-page-redesign.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: index.ts  movie.ts
frontend/src/assets/: main.css
frontend/src/components/: Sidebar.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: movie.test.ts  movie.ts
frontend/src/views/: AIRecommendView.vue  HomeView.vue  MovieDetailView.vue  MovieListView.vue
miniprogram/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
miniprogram/pages/ai/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/detail/: detail.js  detail.json  detail.wxml  detail.wxss
miniprogram/utils/: api.js
(+11 files in other folders)
